# nexus

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  README.md  docker-compose.yml  install.sh  package-lock.json  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: TROUBLESHOOTING.md  api-reference.md  architecture.md  getting-started.md  mcp-setup.md  openapi.json  quickstart.md  self-hosting.md  storage.md
docs/framework-guides/: autogen.md  crewai.md  langgraph.md  openai-agents.md
integrations/autogen/: pyproject.toml
integrations/autogen/decigraph_autogen/: __init__.py  memory.py
integrations/crewai/: pyproject.toml
integrations/crewai/decigraph_crewai/: __init__.py  callback.py  memory.py
integrations/langchain/: pyproject.toml
integrations/langchain/decigraph_langchain/: __init__.py  callback.py  checkpointer.py  memory.py
integrations/langchain/nexus_langchain/: checkpointer.py
integrations/openai-agents/: pyproject.toml
integrations/openai-agents/decigraph_openai_agents/: __init__.py  hooks.py
python-sdk/: README.md  pyproject.toml
python-sdk/decigraph_memory/: __init__.py  cli.py  server.py
python-sdk/nexus_sdk/: __init__.py  client.py  exceptions.py  types.py
scripts/: phase-a-validation.ts  pull-fix-rebuild.sh  seed-demo.ts  smoke-test.sh
supabase/migrations/: 001_initial_schema.sql  002_audit_log.sql  003_relevance_feedback.sql  004_auto_discovery.sql  005_webhooks.sql  009_review_queue.sql  011_phase2_intelligence.sql  012_phase3_multitenancy.sql  013_cleanup_duplicate_tables.sql
