[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "decigraph-openai-agents"
version = "0.1.0"
description = "OpenAI Agents SDK integration for the DeciGraph multi-agent memory platform."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Perlantir" }]
keywords = ["decigraph", "openai", "agents", "memory", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "decigraph-sdk>=0.1.0",
    "openai-agents>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "responses>=0.23",
    "mypy>=1.0",
    "ruff>=0.4",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/nexus-platform/nexus"
Documentation = "https://github.com/perlantir/DeciGraph"

[tool.setuptools.packages.find]
where = ["."]
include = ["decigraph_openai_agents*"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
